--- a/pom.xml
+++ b/pom.xml
@@ -13,8 +13,10 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>learningInAction</name>
 	<description>learningInAction project for Spring Boot</description>
+	<packaging>jar</packaging>
+
 	<properties>
-		<java.version>17</java.version>
+		<java.version>1.8</java.version>
 	</properties>
 	<dependencies>
 		<dependency>
