--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,7 @@
 server.port=8081
 
-
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3307/learning_in_action
+spring.datasource.username=root
+spring.datasource.password=1111
+spring.jpa.generate-ddl=true
